--- a/html/test3-convince.html
+++ b/html/test3-convince.html
@@ -18,24 +18,24 @@
     <div class="col-10" >
       <div class="card">
         <div class="card-header">
-          Test 1
+          Test 3
         </div>
         <div class="card-body">
-          <h5 class="card-title">On a scale of 1-5, how convinced are you about answering the previous question?</h5>
+          <h5 class="card-title">On a scale of 1-5, how confident were you about answering the previous question?</h5>
           <p class="card-text">
-            Level 1: Not very convinced with the answer. This means that you are not fully convinced by the answer given and you may need more information or clarification.
+            Level 1: Not very confident with the answer. This means that you are not fully confident about the answer given and you may need more information or clarification.
           </p>
           <p class="card-text">
-            Level 2: Slightly convinced with the answer. This means that you find the answer partially satisfactory, but you still have some doubts or reservations.
+            Level 2: Slightly confident with the answer. This means that you find the answer partially satisfactory, but you still have some doubts or reservations.
           </p>
           <p class="card-text">
-            Level 3: Moderately convinced with the answer. This means that you find the answer mostly satisfactory, but there are still some minor issues or concerns.
+            Level 3: Moderately confident with the answer. This means that you find the answer mostly satisfactory, but there are still some minor issues or concerns.
           </p>
           <p class="card-text">
-            Level 4: Very convinced with the answer. This means that you find the answer highly satisfactory and you are mostly confident that it is correct.
+            Level 4: Very confident with the answer. This means that you find the answer highly satisfactory and you are mostly confident that it is correct.
           </p>
           <p class="card-text">
-            Level 5: Extremely convinced with the answer. This means that you are fully convinced by the answer given and you have no doubts or reservations about its accuracy or validity.
+            Level 5: Extremely confident with the answer. This means that you are fully confident about the answer given and you have no doubts or reservations about its accuracy or validity.
           </p>
 
           <p class="card-text" style="margin-top: 40px;">
@@ -141,9 +141,9 @@
       });
     }
     count = count + 1;
-    if (count == 261) {
+    if (count == 251) {
       window.setTimeout(() => {
-        location.href = 'training4.html';
+        location.href = 'test3-l2.html';
       }, 1000);
     }
     else{
