--- a/html/test1-l2.html
+++ b/html/test1-l2.html
@@ -56,7 +56,7 @@
     let start = Date.now();
     // do something
 
-    let count = 1;
+    let count = 51;
     let level = 1;
     let step = 4;
     let nDown = 0;
@@ -77,7 +77,7 @@
 
     console.log(dataN)
 
-    const ratioN = 0;
+    const ratioN = 2;
 
     // config
     const config = {
@@ -146,13 +146,13 @@
                     result: true,
                     stamp: time,
                 });
-                website = 'test1-convince.html';
+                website = 'test1-convince-2.html';
 
 
                 if (reversal == 2) {
                     reversal = 0;
                     if (step == 1) {
-                        count = 50;
+                        count = 100;
                     }
                     else{
                         step = step / 2;
@@ -168,7 +168,7 @@
                     if (reversal == 2) {
                         reversal = 0;
                         if (step == 1) {
-                            count = 50;
+                            count = 100;
                         }
                         else{
                             step = step / 2;
@@ -191,7 +191,7 @@
                     result: false,
                     stamp: time,
                 });
-                website = 'test1-convince.html';
+                website = 'test1-convince-2.html';
 
                 if (preResult == 0){
                     reversal = reversal + 1;
@@ -200,7 +200,7 @@
                 if (reversal == 2) {
                     reversal = 0;
                     if (step == 1) {
-                        count = 50;
+                        count = 100;
                     }
                     else{
                         step = step / 2;
