--- a/html/test3-l2.html
+++ b/html/test3-l2.html
@@ -67,7 +67,7 @@
 
   let start = Date.now();
 
-  let count = 201;
+  let count = 251;
   let level = 1;
   let step = 4;
   let nDown = 0;
@@ -85,7 +85,7 @@
 
   const dataN = Math.floor(Math.random() * 4) + 1 + (level - 1) * 5;
 
-  const ratioN = 0;
+  const ratioN = 1;
 
   // config
   const config = {
@@ -197,11 +197,11 @@
         result: true,
         stamp: time,
       });
-      website = 'test3-convince.html';
+      website = 'test3-convince-2.html';
       if (reversal == 2) {
         reversal = 0;
         if (step == 1) {
-          count = 250;
+          count = 300;
         }
         else{
           step = step / 2;
@@ -217,7 +217,7 @@
         if (reversal == 2) {
           reversal = 0;
           if (step == 1) {
-            count = 250;
+            count = 300;
           }
           else{
             step = step / 2;
@@ -239,7 +239,7 @@
         result: false,
         stamp: time,
       });
-      website = 'test3-convince.html';
+      website = 'test3-convince-2.html';
       if (preResult == 0){
         reversal = reversal + 1;
       }
@@ -247,7 +247,7 @@
       if (reversal == 2) {
         reversal = 0;
         if (step == 1) {
-          count = 250;
+          count = 300;
         }
         else{
           step = step / 2;
@@ -282,11 +282,11 @@
         result: true,
         stamp: time,
       });
-      website = 'test3-convince.html';
+      website = 'test3-convince-2.html';
       if (reversal == 2) {
         reversal = 0;
         if (step == 1) {
-          count = 250;
+          count = 300;
         }
         else{
           step = step / 2;
@@ -302,7 +302,7 @@
         if (reversal == 2) {
           reversal = 0;
           if (step == 1) {
-            count = 250;
+            count = 300;
           }
           else{
             step = step / 2;
@@ -324,7 +324,7 @@
         result: false,
         stamp: time,
       });
-      website = 'test3-convince.html';
+      website = 'test3-convince-2.html';
       if (preResult == 0){
         reversal = reversal + 1;
       }
@@ -332,7 +332,7 @@
       if (reversal == 2) {
         reversal = 0;
         if (step == 1) {
-          count = 250;
+          count = 300;
         }
         else{
           step = step / 2;
