--- a/html/training.html
+++ b/html/training.html
@@ -22,7 +22,7 @@
                 <div class="card-body">
                     <h5 class="card-title">I</h5>
                     <p class="card-text">
-                        The task requires participants to analyze a scatterplot with two outliers and choose the one that is furthest from the cluster of points.
+                        The task requires participants to analyze a scatterplot with two outliers and choose the one that is further from the center of cluster.
                     </p>
                     <p class="card-text">
                         An outlier is a point that is located significantly away from other points in the scatterplot,
