--- a/index.html
+++ b/index.html
@@ -20,16 +20,30 @@
 				</div>
 				<div class="card-body">
 					<h5 class="card-title">What is the purpose of this research?</h5>
-					<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-					<h5 class="card-title">What can I expect if I take part in this research?</h5>
-					<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+					<p class="card-text">The purpose of this research is to examine the influence of aspect ratios
+						on the visual perception of scatterplots.</p>
+					<p class="card-text">The goal is to understand how different aspect ratios
+						affect the way people perceive and understand the relationships between variables in scatterplots,
+						and how it affects their overall experience.</p>
+					<h5 class="card-title">How long will the research last and what will I need to do?</h5>
+					<p class="card-text">The procedure for the research study will require participants to attend only one session.
+						The session will last for no longer than approximately 90 minutes. During the session, participants can
+						expect to spend up to 15 minutes familiarizing themself with scatterplots and the related concepts in
+						the tasks, up to 60 minutes conducting tasks that evaluate the application, and up to 15 minutes
+						completing the questionnaire and have a rest.</p>
 					<h5 class="card-title">What should I know about this research study?</h5>
-					<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+					<p class="card-text">Whether or not you take part is up to you.
+						You can choose not to take part. You can agree to take part and later change your mind.
+						Your decision will not be held against you. Your refusal to participate will not result
+						in any consequences or any loss of benefits that you are otherwise entitled to receive.
+						You can ask all the questions you want before you decide.</p>
 					<h5 class="card-title">Who can I talk to?</h5>
-					<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+					<p class="card-text">If you have questions, concerns, or complaints, or think the research has hurt you,
+						talk to the research team at zeroshen@vt.edu</p>
 					<h5 class="card-title">You may only complete this survey once.</h5>
-					<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-					<a href="html/training.html" class="btn btn-primary">Training Information</a>
+					<p class="card-text"></p>
+					<p class="card-text">Please confirm that you have read and agree to this document:</p>
+					<a href="html/training.html" class="btn btn-primary">I Agree</a>
 				</div>
 				<div class="card-footer text-muted">
 					Note:
