--- a/html/test1-false.html
+++ b/html/test1-false.html
@@ -22,17 +22,14 @@
         </div>
         <div class="card-body">
           <h5 class="card-title" style="font-style: italic">For training</h5>
-          <h5 class="card-title">Choose one point</h5>
+          <h5 class="card-title">Result: Unfortunately, it is an incorrect answer.</h5>
           <p class="card-text">
-            Which outlier is further to the center of the cluster?
+            <img src="image/Task1-traing1-result.png" class="img-fluid" style="border: 2px solid #555;">
           </p>
-          <div class="chart-container" id="chartContainer" style="position: relative; height:400px; width:400px">
-            <canvas id="myChart"></canvas>
-          </div>
           <p class="card-text" style="margin-top: 30px;">
-            Unfortunately, it is an incorrect answer.
+
           </p>
-          <a href="test1-l1.html" class="btn btn-primary">Start Test</a>
+          <a href="test1-training2.html" class="btn btn-primary">Try it again</a>
         </div>
         <div class="card-footer text-muted">
           Note:
