--- a/html/test1-l1.html
+++ b/html/test1-l1.html
@@ -23,7 +23,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Choose one point</h5>
                     <p class="card-text">
-                        Which outlier is further to the center of the cluster?
+                        Which outlier is further to the center of the cluster?(Click the point you decide to select)
                     </p>
                     <p class="card-text">
                     <div class="chart-container" id="chartContainer" style="position: relative; height:400px; width:400px">
@@ -121,7 +121,6 @@
 
     document.getElementById('chartContainer').style.width = ratios[ratioN].width;
     document.getElementById('chartContainer').style.height = ratios[ratioN].height;
-
 
     function clickHandler(click) {
         const points = myChart.getElementsAtEventForMode(click, 'nearest', { intersect:true }, true);
