--- a/html/test2-false-2.html
+++ b/html/test2-false-2.html
@@ -22,11 +22,10 @@
                 </div>
                 <div class="card-body">
                     <h5 class="card-title" style="font-style: italic">For training</h5>
-                    <h5 class="card-title">Result: Correct! </h5>
+                    <h5 class="card-title">Result: Unfortunately, it is an incorrect answer.</h5>
                     <p class="card-text">
-                        The left scatterplot has 100 points, the right scatterplot has 120 points.
+                        The left scatterplot has 100 points, the right scatterplot has 80 points.
                     </p>
-                    <p class="card-text">
 
                     <div class="row">
                         <div class="col-6">
@@ -41,8 +40,9 @@
                         </div>
                     </div>
                     <p class="card-text" style="margin-top: 30px;">
+                        Unfortunately, it is an incorrect answer.
                     </p>
-                    <a href="test2-training-2.html" class="btn btn-primary">Try it again</a>
+                    <a href="test2-notice.html" class="btn btn-primary">Start Test</a>
                 </div>
                 <div class="card-footer text-muted">
                     Note:
@@ -69,7 +69,7 @@
 
     let start = Date.now();
 
-    const dataN = 2;
+    const dataN = 1;
 
     const ratioN = 0;
 
@@ -163,6 +163,7 @@
     let pointsNumber1 = dataTask2Training[1].datasets[0].data.length;
     let pointsNumber2 = dataTask2Training[dataN].datasets[0].data.length
     const compare = pointsNumber1 > pointsNumber2
+
 
 
 </script>
