--- a/html/test2-false.html
+++ b/html/test2-false.html
@@ -22,11 +22,10 @@
                 </div>
                 <div class="card-body">
                     <h5 class="card-title" style="font-style: italic">For training</h5>
-                    <h5 class="card-title">Compare</h5>
+                    <h5 class="card-title">Result: Unfortunately, it is an incorrect answer.</h5>
                     <p class="card-text">
-                        Which scatterplot has more points?
+                        The left scatterplot has 100 points, the right scatterplot has 120 points.
                     </p>
-                    <p class="card-text">
 
                     <div class="row">
                         <div class="col-6">
@@ -41,9 +40,8 @@
                         </div>
                     </div>
                     <p class="card-text" style="margin-top: 30px;">
-                        Unfortunately, it is an incorrect answer.
                     </p>
-                    <a href="test2-l1.html" class="btn btn-primary">Start Test</a>
+                    <a href="test2-training-2.html" class="btn btn-primary">Try it again</a>
                 </div>
                 <div class="card-footer text-muted">
                     Note:
@@ -77,7 +75,7 @@
     // config
     const config = {
         type: 'scatter',
-        data: dataTask2Training[1],
+        data: dataTask2Training[0],
         options: {
             scales: {
                 x: {
