--- a/html/test4-result1.html
+++ b/html/test4-result1.html
@@ -115,7 +115,7 @@
   let correlation = dataTask4Level1[dataN].datasets[0].data[0].correlation
   console.log(correlation)
 
-  document.getElementById('show').innerHTML = "The difference is: " + parseFloat(window.location.hash.substring(1));
+  document.getElementById('show').innerHTML = "The correction is 0.999. The difference of two absolute values is: " + parseFloat(window.location.hash.substring(1));
 
 
 
