--- a/html/test2-true-2.html
+++ b/html/test2-true-2.html
@@ -24,7 +24,7 @@
                     <h5 class="card-title" style="font-style: italic">For training</h5>
                     <h5 class="card-title">Result: Correct! </h5>
                     <p class="card-text">
-                        The left scatterplot has 100 points, the right scatterplot has 120 points.
+                        The left scatterplot has 100 points, the right scatterplot has 80 points.
                     </p>
                     <p class="card-text">
 
@@ -42,7 +42,7 @@
                     </div>
                     <p class="card-text" style="margin-top: 30px;">
                     </p>
-                    <a href="test2-training-2.html" class="btn btn-primary">Try it again</a>
+                    <a href="test2-notice.html" class="btn btn-primary">Start Test</a>
                 </div>
                 <div class="card-footer text-muted">
                     Note:
@@ -69,7 +69,7 @@
 
     let start = Date.now();
 
-    const dataN = 2;
+    const dataN = 1;
 
     const ratioN = 0;
 
