--- a/html/test3-false.html
+++ b/html/test3-false.html
@@ -22,11 +22,13 @@
         </div>
         <div class="card-body">
           <h5 class="card-title" style="font-style: italic">For training</h5>
-          <h5 class="card-title">Compare</h5>
+          <h5 class="card-title">Result: Unfortunately, it is an incorrect answer.</h5>
           <p class="card-text">
-            Which scatterplot has stronger correlation?
+            The correlation of the left scatterplot is -0.752, the correlation of the right scatterplot is 0.501.
           </p>
           <p class="card-text">
+            Compare two absolute values, the left one is stronger.
+          </p>
 
           <div class="row">
             <div class="col-6">
@@ -41,9 +43,9 @@
             </div>
           </div>
           <p class="card-text" style="margin-top: 30px;">
-            Unfortunately, it is an incorrect answer.
+
           </p>
-          <a href="test3-l1.html" class="btn btn-primary">Start Test</a>
+          <a href="test3-training-2.html" class="btn btn-primary">Try it again</a>
         </div>
         <div class="card-footer text-muted">
           Note:
