--- a/html/test3-notice.html
+++ b/html/test3-notice.html
@@ -55,7 +55,7 @@
   function submitFunctionC1() {
 
 
-    let website = 'test3-l.html';
+    let website = 'test3-l1.html';
 
     location.href = website;
   }
