--- a/html/training4.html
+++ b/html/training4.html
@@ -61,11 +61,7 @@
                     </p>
                     <h5 class="card-title">III</h5>
                     <p class="card-text">
-                        Participants are expected to examine the scatterplots and identify the scatterplot that has stronger correlation.
-
-                    </p>
-                    <p class="card-text">
-                        Then, make the selection by clicking any point of the scatterplot.
+                        Participants are expected to examine the scatterplots and identify the correlation of the scatterplot.
                     </p>
                     <p class="card-text">
                         The scatterplots contain multiple points that are scattered.
