--- a/html/test3-true-2.html
+++ b/html/test3-true-2.html
@@ -24,10 +24,10 @@
           <h5 class="card-title" style="font-style: italic">For training</h5>
           <h5 class="card-title">Result: Correct answer!</h5>
           <p class="card-text">
-            The correlation of the left scatterplot is -0.752, the correlation of the right scatterplot is 0.501.
+            The correlation of the left scatterplot is 0.749, the correlation of the right scatterplot is 0.83.
           </p>
           <p class="card-text">
-            Compare two absolute values, the left one is stronger.
+            Compare two absolute values, the right one is stronger.
           </p>
           <p class="card-text">
 
@@ -45,7 +45,7 @@
           </div>
           <p class="card-text" style="margin-top: 30px;">
           </p>
-          <a href="test3-training-2.html" class="btn btn-primary">Try it again</a>
+          <a href="test3-notice.html" class="btn btn-primary">Start Test</a>
         </div>
         <div class="card-footer text-muted">
           Note:
@@ -72,14 +72,14 @@
 
   let start = Date.now();
 
-  const dataN = 1;
+  const dataN = 3;
 
-  const ratioN = 0;
+  const ratioN = 3;
 
   // config
   const config = {
     type: 'scatter',
-    data: dataTask3Training[0],
+    data: dataTask3Training[2],
     options: {
       scales: {
         x: {
