--- a/html/test4-result1.html
+++ b/html/test4-result1.html
@@ -22,19 +22,13 @@
         </div>
         <div class="card-body">
           <h5 class="card-title" style="font-style: italic">For training</h5>
-          <h5 class="card-title">Identify Correlation</h5>
-          <p class="card-text">
-            What is the correlation in this scatterplot? (Absolute value)
-          </p>
-          <p class="card-text">
-            (The answer should be in the ranges: (0.45, 1.00). Give your answer to 2 decimal places(0.01))
-          </p>
+          <h5 class="card-title">Result:</h5>
+          <p class="card-text" id="show"></p>
 
           <div class="chart-container" id="chartContainer" style="position: relative; height:400px; width:400px">
             <canvas id="myChart"></canvas>
           </div>
-          <p class="card-text" id="show" style="margin-top: 30px;">
-          </p>
+
           <a href="test4-training2.html" class="btn btn-primary">Try Again</a>
         </div>
 
