--- a/html/test1-l1.html
+++ b/html/test1-l1.html
@@ -91,11 +91,17 @@
                     },
                     type: 'linear',
                     position: 'bottom',
+                    max: 100,
+                    min: 0,
+                    stepSize: 10,
                 },
                 y: {
                     grid: {
                         display: false,
                     },
+                    max: 100,
+                    min: 0,
+                    stepSize: 10,
                 },
             },
             events: [],
@@ -144,6 +150,7 @@
                     time: response,
                     result: true,
                     stamp: time,
+                    pointIndex: firstPoint.index,
                 });
                 website = 'test1-convince.html';
 
@@ -189,6 +196,7 @@
                     time: response,
                     result: false,
                     stamp: time,
+                    pointIndex: firstPoint.index,
                 });
                 website = 'test1-convince.html';
 
