--- a/html/test1-training.html
+++ b/html/test1-training.html
@@ -75,11 +75,17 @@
           },
           type: 'linear',
           position: 'bottom',
+          max: 100,
+          min: 0,
+          stepSize: 10,
         },
         y: {
           grid: {
             display: false,
           },
+          max: 100,
+          min: 0,
+          stepSize: 10,
         },
       },
       events: [],
